# bruto-pascal-lang

./: .gitignore  Cargo.toml  GRAMMAR.md  README.md
.github/workflows/: publish.yml
.tokensave/: config.json  tokensave.db
src/: ast.rs  codegen.rs  lib.rs  parser.rs  pascal_syntax.rs
