[package]
name = "bruto-pascal-lang"
version = "0.1.0"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/bruto-pascal-lang"
description = "Mini-Pascal language implementation for bruto-ide"

[dependencies]
turbo-vision = { git = "https://github.com/aovestdipaperino/turbo-vision-4-rust.git" }
inkwell = { version = "0.8.0", features = ["llvm18-1"] }
bruto-ide = { git = "https://github.com/aovestdipaperino/bruto-ide.git" }
