[package]
name = "bruto-pascal-lang"
version = "1.0.1"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/bruto-pascal-lang"
description = "Mini-Pascal language implementation for bruto-ide"
license = "MIT"
readme = "README.md"

[dependencies]
turbo-vision = { version = "1.2", git = "https://github.com/aovestdipaperino/turbo-vision-4-rust.git" }
inkwell = { version = "0.8.0", features = ["llvm18-1"] }
bruto-lang = { version = "1.0.1", git = "https://github.com/aovestdipaperino/bruto-lang.git" }
