[package]
name = "bruto-pascal-lang"
version = "1.0.2"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/bruto-pascal-lang"
description = "Mini-Pascal language implementation for bruto-ide"
license = "MIT"
readme = "README.md"

[dependencies]
turbo-vision = "1.2"
inkwell = { version = "0.8.0", features = ["llvm18-1"] }
bruto-lang = "1.0.2"
